--- a/assets/dogecoin-testnet.conf
+++ b/assets/dogecoin-testnet.conf
@@ -1,5 +1,5 @@
 ##
-## bitcoin.conf configuration file. Lines beginning with # are comments.
+## dogecoin.conf configuration file. Lines beginning with # are comments.
 ##
 
 # DO NOT USE THIS CONFIGURATION FILE IF YOU PLAN TO EXPOSE
